# gaze_vit_v2

./: .assistant_prefs.json  .gitignore  README.md  pyproject.toml
GABRIL_utils/: utils.py
config/: vit_s_14.yaml
dev/: atari_env_min_frames.txt  confusion_matrix.ipynb  confusion_matrix.py  gaze_vit_v2.code-workspace  hook_lucidrains_vit.ipynb  main.py  patchify_gaze_mask.ipynb  rollout_runner.py  svit14.sbatch  train_vit.ipynb  train_vit.py  trainer.py  upsampling.ipynb  validation.ipynb
dev/GABRIL_utils/: atari_env_manager.py  frame_writer.py  gaze_to_mask.py  gaze_utils.py
dev/config/: base.yaml  vit_s_14_CE.yaml  vit_s_14_CEBeforeAvgUS.yaml  vit_s_14_timm.yaml
dev/config/model/: vivit_s_14.yaml
dev/losses/: bce_after_avg_us.py  bce_before_avg_us.py  ce.py  ce_after_avg_ds.py  ce_after_avg_us.py  ce_before_avg_ds.py  ce_before_avg_us.py  ce_plus_gaze_reg.py
dev/utils/: hook.py  logger.py  patch_gaze_masks.py
